[package]
name = "bma4xx"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "Embedded no_std driver for Bosch Sensortec BMA4xx series"

[dependencies]
embedded-hal = "0.2"
accelerometer = { version = "0.11", features = ["orientation"] }
